# independent-research

./: docker-compose.yaml  readme.md
container/myapp/: Dockerfile  pyproject.toml
